[package]
name = "exercism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/hello_world",
    "crates/lucians_luscious_lasagna",
    "crates/assembly_line",
    "crates/semi-structured-logs",
    "crates/resistor-color",
    "crates/health-statistics",
    "crates/short-fibonacci",
    "crates/reverse-string",
    "crates/gigasecond",
    "crates/low-power-embedded-game",
    "crates/role-playing-game",
    "crates/clock",
    "crates/anagram",
    "crates/magazine-cutout",
    "crates/rpn-calculator",
]

[dependencies]
